external-crates/move/crates/move-compiler/tests/move_2024/typing/macro_arg_by_name_strange_usage.exp
error[E06002]: use of unassigned variable
   ┌─ tests/move_2024/typing/macro_arg_by_name_strange_usage.move:14:14
   │
14 │         foo!(x); // TODO improve this error message
   │              ^
   │              │
   │              Invalid usage of previously moved variable 'x'.
   │              Suggestion: use 'copy x' to avoid the move.
   │              In a loop, this typically means it was moved in the first iteration, and is not available by the second iteration.

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_2024/typing/macro_arg_by_name_strange_usage.move:17:14
   │
 2 │     public struct X() has drop;
   │                   - To satisfy the constraint, the 'copy' ability would need to be added here
 3 │     public struct S { f: X } has drop;
   │                          - The type 'a::m::X' does not have the ability 'copy'
   ·
17 │         foo!(s.f); // TODO improve this error message
   │              ^^^ Invalid implicit copy of field 'f' without the 'copy' ability

